# team-bot

./: Dockerfile  README.md  appsettings.json  device.json  keystore.json
bot-py/: README.md  pyproject.toml  requirements.txt
bot-py/src/: config.py
bot-py/src/data/: team_record.db
bot-py/src/plugins/: api.py  database.py  handler.py  html_generator.py  render_image.py
bot-py/src/static/: mount_equip.json  styles.css
bot-py/src/templates/: help.html  team.html
bot-py/src/utils/: index.py  jx3_profession.py  permission.py  table_position.py
lagrange-0-db/: .realm
