[project]
name = "bot-dd"
version = "0.1.0"
description = "bot-dd"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry.dependencies]
jinja2 = "^3.1.5"
imgkit = "^1.2.3"
requests = "^2.32.3"
